Fix missing scrollbar

--- a/Client/wwwroot/css/site.css
+++ b/Client/wwwroot/css/site.css
@@ -121,11 +121,12 @@ body {
     padding-top: 5rem;
     position: fixed;
     width: 100%;
+    overflow-y: hidden;
 }
 
 main {
     width: 100%;
-    overflow-y: hidden;
+    overflow-y: auto;
 }
 
 h1 {
